[package]
name = "sqm_parser"
version = "1.0.1"
authors = ["Scarjit <scarjit@aol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.40"